tests/paczka1/small_fuzzy/57416351.err
Error in line 2: IzzR9 A119 587,5
Error in line 4: IzzR9 A985 92,8
